--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -811,6 +811,12 @@ footer .footer--column .column-links a {
   }
 }
 @media screen and (max-width: 600px) {
+  .landing section {
+    margin: 150px 0;
+  }
+  .landing--hero {
+    margin-top: 100px !important;
+  }
   .landing--hero header {
     width: 460px;
   }
@@ -823,13 +829,6 @@ footer .footer--column .column-links a {
   .landing .float-wrapper {
     width: 100%;
     position: relative;
-  }
-  .landing section {
-    margin: 150px 0;
-  }
-  .landing--intro {
-    margin-top: 150px;
-    margin-bottom: 150px;
   }
   .landing--intro header {
     width: 460px;
@@ -885,129 +884,60 @@ footer .footer--column .column-links a {
     margin-top: 80px !important;
   }
   .landing--hero .hero--image {
-    margin-bottom: 15px;
-    text-align: center;
+    width: 275px;
   }
   .landing--hero .hero--image img {
-    width: 300px;
+    width: 275px;
   }
   .landing--hero header {
-    width: 300px;
+    width: 275px;
   }
   .landing--hero header h1 {
-    font-size: 42px;
+    font-size: 39px;
   }
   .landing--hero header p {
     font-size: 18px;
   }
   .landing--intro header {
-    width: 300px;
+    width: 280px;
   }
   .landing--intro header p {
     font-size: 18px;
   }
   .landing--intro .interactive-block--placeholder img {
-    width: 200px;
+    width: 300px;
   }
-  .landing--intro .projectlogo-carousel {
-    margin: 0 -15px;
-    margin-top: 80px;
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
-    gap: 35px;
-    overflow: hidden;
+  .landing--intro .projectlogo-carousel .project-logos {
+    gap: 40px;
+    animation: scroll_Logos__tablet 30s linear infinite;
   }
-  .landing--intro .projectlogo-carousel img {
+  .landing--intro .projectlogo-carousel .project-logos img {
     height: 25px;
   }
-  .landing--about {
-    background: #D0CECD;
-    color: #140903;
-  }
   .landing--about .container {
-    height: 100%;
-    padding: 80px 0px;
+    padding: 100px 20px 80px 20px;
   }
   .landing--about .feature {
-    margin: 60px 0;
-  }
-  .landing--about .feature .image-wrapper {
-    margin: 0 auto;
+    width: 280px;
   }
   .landing--about .feature .image-wrapper img.feature-image {
-    width: 200px;
-    height: 200px;
-  }
-  .landing--about .feature .content-wrapper {
-    width: 300px;
-    margin: 0 auto;
-    padding: 0;
-  }
-  .landing--about .feature.reverse {
-    flex-direction: column;
-  }
-  .landing--about div:nth-child(4) {
-    margin-bottom: 60px;
-  }
-  .landing--about .button-wrapper .learn-more {
-    padding: 8px 35px;
-    font-size: 18px;
+    width: 150px;
+    height: 150px;
   }
   .landing--projects header {
-    margin-bottom: 60px;
-    padding: 0 20px;
-  }
-  .landing--projects .project-carousel .project-wrapper {
-    justify-content: start;
-    gap: 15px;
-  }
-  .landing--projects .project-carousel .project-wrapper:first-child {
-    padding-left: 20px;
-  }
-  .landing--projects .project-carousel .project-wrapper .github-card {
-    width: 100%;
-    height: auto;
-    padding-bottom: 9px;
-    border-radius: 15px;
-  }
-  .landing--projects .project-carousel .project-wrapper .github-card img.project-photo {
-    width: 200px;
-    height: auto;
-    margin: 10px;
-    border-radius: 10px;
-  }
-  .landing--projects .project-carousel .project-wrapper .github-card .github-wrapper {
-    margin: 0 10px;
-  }
-  .landing--projects .project-carousel .project-wrapper .github-card .github-wrapper img.github-logo {
-    width: 20px;
-    height: 20px;
-  }
-  .landing--projects .project-carousel .project-wrapper:hover {
-    animation-play-state: paused;
-  }
-  .landing--projects .project-carousel .arrows-container {
-    width: 62px;
-    height: 150px;
-    top: 40px;
-  }
-  .landing--projects .project-carousel .arrows-container img {
-    height: 150px;
-  }
-  .landing--cta .container {
-    gap: 20px;
-    flex-wrap: nowrap;
+    width: 280px;
   }
   .landing--cta img {
-    width: 300px;
+    width: 280px;
   }
   .landing--cta header {
-    width: 300px;
+    width: 280px;
+  }
+  .landing--cta header h3 {
+    font-size: 24px;
   }
   .landing--cta .sign-up {
-    padding: 12px 36px;
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
