add matterjs game, add delay for gravity when game-container scrolls into view, refractor svg elements into razor components, clean up code

--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -21,12 +21,12 @@
                 <h3>Blossom breaks many paradigms</h3>
                 <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
             </header>
-            @*                <div class="interactive-block">
-            <img src="images/Blocks.png" />
-            </div>*@
-            <div class="interactive-block--placeholder">
-                <img src="images/Placeholder_minigame.png" />
+            <div class="interactive-block">
+                <Game />
             </div>
+            @*<div class="interactive-block--placeholder">
+                <img src="images/Placeholder_minigame.png" />
+            </div>*@
         </div>
         <div class="projectlogo-carousel">
             <div class="project-logos">
