--- a/Sparc.Blossom.Server/_Imports.razor
+++ b/Sparc.Blossom.Server/_Imports.razor
@@ -14,6 +14,7 @@
 @using Sparc.Core
 @using Sparc.Blossom.Server.Pages
 @using Sparc.Blossom.Server.Shared
+@using Sparc.Blossom.Server.Components
 @using Sparc.Ibis
 
 @inject IJSRuntime JSRuntime
